Fixed unexpected Whitespace on right side

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,9 +19,11 @@
 }
 html{
     overflow-x: hidden !important;
+    margin: 0 !important;
 }
 body{
     font-family: fontregularb;
+    overflow-x: hidden !important;
     letter-spacing: 2px;
 }
 div{
